syntax = "proto3";

package auth_v1;

import "buf/validate/validate.proto";


option go_package = "github.com/laiker/auth/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest {
  string email = 1 [(buf.validate.field).string.email = true];;
  string password = 2 [(buf.validate.field).required = true];;
}

message LoginResponse {
  string refresh_token = 1;
  string access_token = 2;
}

message GetRefreshTokenRequest {
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}